--- a/style.css
+++ b/style.css
@@ -42,14 +42,14 @@ align-items: center;
 /* gap:8px; */
 }
 
-.input{
+.input {
     display: flex;
     flex-direction: column;
     justify-content: center;
 
 
 }
-.input input{
+.input input,#message{
 background: #000;
 width: 300px;
 height: 30px;
